k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logistics
  labels:
    app.kubernetes.io/part-of: cloudscale-logistics
